syntax = "proto3";

import "google/protobuf/timestamp.proto";

package pereslavtsev.webarchiver.v1;

service WatchersService {
  rpc ListWatchers (ListWatchersRequest) returns (ListWatchersResponse);
  rpc GetWatcher (GetWatcherRequest) returns (Watcher);
  rpc CreateWatcher (CreateWatcherRequest) returns (Watcher);
  rpc UpdateWatcher (UpdateWatcherRequest) returns (Watcher);
  rpc RunWatcher (GetWatcherRequest) returns (Watcher);
  rpc PauseWatcher (GetWatcherRequest) returns (Watcher);
  rpc PauseAllWatchers (PauseAllWatchersRequest) returns (PauseAllWatchersResponse);
  rpc StopWatcher (GetWatcherRequest) returns (Watcher);
  rpc WatcherStream (GetWatcherRequest) returns (stream WatcherStreamResponse) {}
}

message PageInfo {
  int32 id = 1;
  int32 ns = 2;
  string title = 3;
  string content_model = 4;
  string page_language = 5;
  string page_language_html_code = 6;
  string page_language_dir = 7;
  google.protobuf.Timestamp touched_at = 8;
  int32 last_rev_id = 9;
  int32 length = 10;
  string full_url = 11;
  string edit_url = 12;
  string canonical_url = 13;
}

message WatcherStreamResponse {
  repeated PageInfo pages = 1;
}

message ListWatchersRequest {
  int32 page_size = 1;
  string page_token = 2;
  string order_by = 3;
}

message ListWatchersResponse {
  repeated Watcher data = 1;
  string next_page_token = 2;
}

message PauseAllWatchersRequest {}
message PauseAllWatchersResponse {}

message GetWatcherRequest {
  string id = 1;
}

message CreateWatcherRequest {
  string name = 2;
  string initial_query = 3;
}

message UpdateWatcherRequest {
  string id = 1;
  string name = 2;
}

message Watcher {
  string id = 1;
  string name = 2;

  enum Status {
    PENDING = 0;
    ACTIVE = 1;
    PAUSED = 2;
  }

  Status status = 3;

  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}